[gd_scene load_steps=26 format=3 uid="uid://caw5xyqlm0xl3"]

[ext_resource type="Script" path="res://Scripts/PlayerControls.gd" id="1_ewy2h"]
[ext_resource type="Script" path="res://Scripts/WeaponManager.gd" id="2_usu16"]
[ext_resource type="Texture2D" uid="uid://d7s3htt3jrih" path="res://assets/plusdot.png" id="3_mslni"]
[ext_resource type="Resource" uid="uid://bmdww5vb7c16n" path="res://WeaponResources/Pistol.tres" id="3_oil4u"]
[ext_resource type="Resource" uid="uid://dwbnia4oh4iyb" path="res://WeaponResources/Rifle.tres" id="4_hndl3"]
[ext_resource type="Resource" uid="uid://b67oqi8p5sudb" path="res://WeaponResources/Sniper.tres" id="5_r30x2"]
[ext_resource type="PackedScene" uid="uid://bywx4k04mx6p7" path="res://assets/weapons (by kenney)/blasterC.glb" id="8_6yjl3"]
[ext_resource type="Script" path="res://Scripts/HUD.gd" id="9_88agy"]
[ext_resource type="PackedScene" uid="uid://d4gi3b4io6nem" path="res://assets/weapons (by kenney)/blasterD.glb" id="9_e170d"]
[ext_resource type="PackedScene" uid="uid://bnbtocxet8py3" path="res://assets/weapons (by kenney)/blasterE.glb" id="10_cficf"]
[ext_resource type="AudioStream" uid="uid://b3brvajpga7r4" path="res://audio/Snake's Authentic Gun Sounds/Full Sound/5.56/WAV/556 Single WAV.wav" id="11_rl0ao"]
[ext_resource type="AudioStream" uid="uid://d10bn7mpaffca" path="res://audio/Snake's Authentic Gun Sounds/Full Sound/7.62x39/WAV/762x39 Single WAV.wav" id="12_g83jy"]
[ext_resource type="AudioStream" uid="uid://c5ysp2bd60w0j" path="res://audio/Snake's Authentic Gun Sounds/Full Sound/7.62x54R/WAV/762x54r Single WAV.wav" id="13_o71tm"]

[sub_resource type="Animation" id="Animation_k01ce"]
resource_name = "PistolEquip"
length = 0.3
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pistol")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0.433461, 0.3, 1, 0, 0, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pistol")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -4.03841e-08, 0.382683, 0.92388, 1.67276e-08, 0.3, 1, 0, 1, 0, -4.37114e-08)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pistol:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BulletSource")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0.3, 1, 0.00188747, 0.0157248, -0.2402)

[sub_resource type="Animation" id="Animation_8ccv5"]
resource_name = "PistolShot"
length = 0.2
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pistol")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.1, 1, 0, 0, 0.1, 0.2, 1, 0, 0, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pistol")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0, -7.54979e-08, 0.1, 1, -3.8097e-09, 0.996195, 0.0871558, 4.35451e-08, 0.2, 1, 0, 1, 0, -7.54979e-08)

[sub_resource type="Animation" id="Animation_5g60j"]
resource_name = "PistolUnequip"
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Pistol")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.2, 1, 0, -0.4, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Pistol")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0, -7.54979e-08, 0.2, 1, 1.67276e-08, 0.92388, -0.382683, 4.03841e-08)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pistol:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8uxrg"]
resource_name = "RifleEquip"
length = 0.4
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rifle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0.406633, 0.4, 1, 0, 0, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rifle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -4.03841e-08, 0.382683, 0.92388, 1.67276e-08, 0.4, 1, 0, 1, 0, -4.37114e-08)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rifle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BulletSource")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0.4, 1, 0.00188747, 0.0413505, -0.435304)

[sub_resource type="Animation" id="Animation_a8lnc"]
resource_name = "RifleShot"
length = 0.1
step = 0.01
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rifle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.01, 1, 0, 0, 0.02, 0.1, 1, 0, 0, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rifle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0, -7.54979e-08, 0.01, 1, -7.62869e-10, 0.999848, 0.0174524, 4.37047e-08, 0.1, 1, 0, 1, 0, -7.54979e-08)

[sub_resource type="Animation" id="Animation_4idj7"]
resource_name = "RifleUnequip"
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rifle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.2, 1, 0, -0.375382, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rifle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0, -7.54979e-08, 0.2, 1, -1.67276e-08, 0.92388, -0.382683, -4.03841e-08)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rifle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_neycd"]
resource_name = "SniperEquip"
length = 0.5
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sniper")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.1, 1, 0, 0, 0.502702, 0.5, 1, 0, 0, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sniper")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0.1, 1, -4.03841e-08, 0.382683, 0.92388, 1.67276e-08, 0.5, 1, 0, 1, 0, -4.37114e-08)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sniper:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BulletSource")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0.5, 1, 0.00188747, 0.0471745, -0.711363)

[sub_resource type="Animation" id="Animation_m3e7o"]
resource_name = "SniperShot"
length = 0.5
step = 0.05
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sniper")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.05, 1, 0, 0.183828, 0.0501585, 0.5, 1, 0, 0, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sniper")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0, -7.54979e-08, 0.05, 1, -7.5904e-09, 0.984808, 0.173648, 4.30473e-08, 0.5, 1, 0, 1, 0, -7.54979e-08)

[sub_resource type="Animation" id="Animation_x672f"]
resource_name = "SniperUnequip"
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sniper")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.2, 1, 0, -0.48236, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sniper")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0, -4.37114e-08, 0.2, 1, 1.67276e-08, 0.92388, -0.382683, 4.03841e-08)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sniper:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qd7d8"]
_data = {
"PistolEquip": SubResource("Animation_k01ce"),
"PistolShot": SubResource("Animation_8ccv5"),
"PistolUnequip": SubResource("Animation_5g60j"),
"RifleEquip": SubResource("Animation_8uxrg"),
"RifleShot": SubResource("Animation_a8lnc"),
"RifleUnequip": SubResource("Animation_4idj7"),
"SniperEquip": SubResource("Animation_neycd"),
"SniperShot": SubResource("Animation_m3e7o"),
"SniperUnequip": SubResource("Animation_x672f")
}

[sub_resource type="CapsuleMesh" id="CapsuleMesh_87vnx"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_f0v2g"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_ewy2h")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("9_88agy")

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
offset_right = 158.0
offset_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Current weapon: "

[node name="CurrentWeapon" type="Label" parent="HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Available weapons: "

[node name="CurrentWeapons" type="Label" parent="HUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Crossshair" type="TextureRect" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_mslni")
stretch_mode = 3

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.576148, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]

[node name="WeaponManager" type="Node3D" parent="CameraPivot/Camera3D"]
script = ExtResource("2_usu16")
weaponResources = Array[Resource("res://Scripts/WeaponResource.gd")]([ExtResource("3_oil4u"), ExtResource("4_hndl3"), ExtResource("5_r30x2")])
startWeapons = Array[String](["Pistol", "Rifle", "Sniper"])

[node name="WeaponRig" type="Node3D" parent="CameraPivot/Camera3D/WeaponManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.284507, -0.246559, -0.490016)

[node name="Pistol" parent="CameraPivot/Camera3D/WeaponManager/WeaponRig" instance=ExtResource("8_6yjl3")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)
visible = false

[node name="Rifle" parent="CameraPivot/Camera3D/WeaponManager/WeaponRig" instance=ExtResource("9_e170d")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)
visible = false

[node name="Sniper" parent="CameraPivot/Camera3D/WeaponManager/WeaponRig" instance=ExtResource("10_cficf")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CameraPivot/Camera3D/WeaponManager/WeaponRig"]
libraries = {
"": SubResource("AnimationLibrary_qd7d8")
}

[node name="BulletSource" type="Marker3D" parent="CameraPivot/Camera3D/WeaponManager/WeaponRig"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.00188747, 0.0157248, -0.2402)

[node name="5_56" type="AudioStreamPlayer" parent="CameraPivot/Camera3D/WeaponManager"]
stream = ExtResource("11_rl0ao")

[node name="7_92x39" type="AudioStreamPlayer" parent="CameraPivot/Camera3D/WeaponManager"]
stream = ExtResource("12_g83jy")

[node name="7_92x54" type="AudioStreamPlayer" parent="CameraPivot/Camera3D/WeaponManager"]
stream = ExtResource("13_o71tm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_87vnx")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_f0v2g")

[connection signal="WeaponChanged" from="CameraPivot/Camera3D/WeaponManager" to="HUD" method="_on_weapon_manager_weapon_changed"]
[connection signal="WeaponListChanged" from="CameraPivot/Camera3D/WeaponManager" to="HUD" method="_on_weapon_manager_weapon_list_changed"]
[connection signal="animation_finished" from="CameraPivot/Camera3D/WeaponManager/WeaponRig/AnimationPlayer" to="CameraPivot/Camera3D/WeaponManager" method="_on_animation_player_animation_finished"]
